# uav_swarm_pkgs

uav_swarm_control/: CMakeLists.txt  formation.yaml  package.xml  params.yaml  uav_swarm_control.rviz  uav_swarm_formation.rviz
uav_swarm_control/bagfiles/: data00.txt  data1.txt  data10.txt  data2.txt  data20.txt  data3.txt  icar.bag  icar2.bag  icar3.bag  icar4.bag  icar5.bag  icar6.bag  icar7.bag  icar8.bag  icar9.bag  imav01.bag  pose0.txt  pose09.txt  pose1.txt  pose19.txt  pose2.txt  pose29.txt
uav_swarm_control/bagfiles/imav/: imav_tw_1.bag  process.bash  process.bash~
uav_swarm_control/bagfiles/imav/manual/: tw_1_ec.txt  tw_1_fp.txt  tw_1_mp.txt  tw_1_q1.txt  tw_1_q1.txt~  tw_1_q2.txt  tw_1_q2.txt~  tw_1_q3.txt  tw_1_q3.txt~
uav_swarm_control/bagfiles/imav/processed/: tw_1_ec.txt  tw_1_fp.txt  tw_1_mp.txt
uav_swarm_control/include/uav_swarm_control/: FormationControllerNode.h  GasFinderNode.h  MarkerPublisher.h  SwarmControllerNode.h
uav_swarm_control/launch/: apm_formation.launch  artigo.launch  big_swarm.launch  formation_controller.launch  gas_finder_simulation.launch  swarm_com_arquivo.launch  swarm_formation.launch  test_rule3.launch  uav_swarm_simulation.launch  web_gcs.launch
uav_swarm_control/src/: formation_change_node.cpp  formation_controller_node.cpp  gas_finder_node.cpp  marker_publisher.cpp  migration_point_publisher.cpp  odom_to_pose_converser.cpp  pose_publisher.cpp  swarm_controller_node.cpp
uav_swarm_control/src/uav_swarm_control/: FormationControllerNode.cpp  GasFinderNode.cpp  MarkerPublisher.cpp  SwarmControllerNode.cpp  gdsg.cpp
uav_swarm_control/src/uav_swarm_control/functions/: haversines  haversines.cpp
uav_swarm_control/worlds/: formation.world
uav_swarm_description/: CMakeLists.txt  package.xml
uav_swarm_description/urdf/: quadrotor.urdf.xacro  quadrotor_2.urdf.xacro  quadrotor_base.urdf.xacro  quadrotor_base_2.urdf.xacro
uav_swarm_evaluation/: CMakeLists.txt  package.xml
uav_swarm_msgs/: CMakeLists.txt  package.xml
uav_swarm_pkgs/: CMakeLists.txt  package.xml
