<?xml version="1.0"?>
<package>
  <name>uav_swarm_control</name>
  <version>0.0.0</version>
  <description>This package contains all the nodes that implement control strategies to move the swarm.</description>

  <maintainer email="faerugb@gmail.com">Rafael Gomes Braga</maintainer>

  <author>Rafael Gomes Braga</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>uav_swarm_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>mavros_msgs</run_depend>
  <run_depend>uav_swarm_msgs</run_depend>
  
  
</package>
