<?xml version="1.0"?>
<package>
  <name>uav_swarm_evaluation</name>
  <version>0.0.0</version>
  <description>The uav_swarm_evaluation package</description>

  <maintainer email="faerugb@gmail.com">Rafael Gomes Braga</maintainer>

  <author>Rafael Gomes Braga</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
</package>
